--- a/cloud2020/cloud-provider-payment8001/src/main/resources/application.yml
+++ b/cloud2020/cloud-provider-payment8001/src/main/resources/application.yml
@@ -9,9 +9,13 @@ spring:
   datasource:
     type: com.alibaba.druid.pool.DruidDataSource            # 当前数据源操作类型
     driver-class-name: com.ibm.db2.jcc.DB2Driver          # mysql驱动包
-    url: jdbc:db2://127.0.0.1:50000/sample
-    username: db2inst1
-    password: qwer1234
+    #url: jdbc:db2://127.0.0.1:50000/sample
+    #username: db2inst1
+    #password: qwer1234
+
+    url: jdbc:db2://127.0.0.1:50000/budget05
+    username: ADMINISTRATOR
+    password: cui
 
 
 
@@ -23,9 +27,9 @@ eureka:
     fetchRegistry: true
     service-url:
       #单机版
-      #defaultZone: http://localhost:7001/eureka
+      defaultZone: http://localhost:7001/eureka
       # 集群版
-      defaultZone: http://localhost:7001/eureka,http://localhost:7002/eureka
+      #defaultZone: http://localhost:7001/eureka,http://localhost:7002/eureka
     instance:
       instance-id: payment8001
     #访问路径可以显示IP地址
