--- a/cloud2020/pom.xml
+++ b/cloud2020/pom.xml
@@ -36,6 +36,7 @@
     <module>cloudalibaba-provider-payment9003</module>
     <module>cloudalibaba-provider-payment9004</module>
       <module>cloudalibaba-config-nacos-client3377</module>
+      <module>cloudalibaba-sentinel-service8401</module>
 
 
   </modules>
